Add lemmatization hint

--- a/Spanish CWB Encoder.ipynb
+++ b/Spanish CWB Encoder.ipynb
@@ -301,6 +301,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that, lemmatization is a bit wrong at the start of a new sentence. The lemma should be in lower cases. However, we will not fix that here.\n",
+    "\n",
     "Finally, putting all the parts together, we now have a small clean main loop to generate the output."
    ]
   },
